Add app history download endpoint
