# src/resources/swagger.yaml
@@ -443,6 +443,20 @@ paths:
         '200':
           description: OK
 
+  /export/application-history/:
+    get:
+      tags:
+        - Admin
+      summary: Download a tsv of all application updates
+      responses:
+        '200':
+          description: OK
+          content:
+            text/tsv:
+              schema:
+                type: string
+              example: 'Application #  Date of Status Change  Application Status  Application Type  Action Performed By  Days Since Last Status Change  Institution Country Applicant Project Title Ethics Letter'
+
 tags:
   - name: Health
     description: Service status monitoring
